<resources>
    <string name="app_name">Calculadora</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="dies">10</string>
    <string name="cero">0</string>
    <string name="menos">-</string>
    <string name="mas">+</string>
    <string name="por">*</string>
    <string name="entre">/</string>
    <string name="nose">+/-</string>
    <string name="porciento">%</string>
    <string name="resultado">=</string>
    <string name="ac">AC</string>


</resources>