<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:background="@android:color/background_dark"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
        android:background="@color/colorPrimary"
        android:layout_marginTop="205dp"
        android:textSize="40sp"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:orientation="vertical"
        android:text="AC" />

        <Button
            android:background="@color/colorPrimary"
            android:layout_marginTop="205dp"
            android:textSize="40sp"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            android:text="@string/nose" />
        <Button
            android:background="@color/colorPrimary"
            android:layout_marginTop="205dp"
            android:textSize="40sp"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            android:text="@string/porciento" />

        <Button
            android:layout_width="113dp"
            android:layout_height="110dp"
            android:layout_marginTop="205dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:text="@string/entre"
            android:textSize="40sp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:background="@color/gris"
                android:layout_marginTop="315dp"
                android:textSize="40sp"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:orientation="vertical"
                android:text="@string/siete"
                />
            <Button
                android:background="@color/gris"
                android:layout_marginTop="315dp"
                android:textSize="40sp"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:orientation="vertical"
                android:text="@string/ocho" />
            <Button
                android:background="@color/gris"
                android:layout_marginTop="315dp"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:textSize="40sp"
                android:orientation="vertical"
                android:text="@string/nueve" />

            <Button

                android:layout_width="112dp"
                android:layout_height="110dp"
                android:layout_marginTop="315dp"
                android:background="@color/colorAccent"
                android:orientation="vertical"
                android:text="@string/por"
                android:textSize="40sp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">



        <Button
            android:background="@color/gris"
            android:layout_marginTop="425dp"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            android:textSize="40sp"
            android:layout_gravity="center|top"
            android:text="@string/cuatro" />
        <Button
            android:background="@color/gris"
            android:layout_marginTop="425dp"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            android:textSize="40sp"
            android:layout_gravity="center|top"
            android:text="@string/cinco" />
        <Button
            android:background="@color/gris"
            android:layout_marginTop="425dp"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            android:textSize="40sp"
            android:layout_gravity="center|top"
            android:text="@string/seis" />

        <Button
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="425dp"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:text="@string/menos"
            android:textSize="40sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">



    <Button
        android:background="@color/gris"
        android:layout_marginTop="535dp"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:orientation="vertical"
        android:textSize="40sp"
        android:layout_gravity="center|top"
        android:text="@string/uno" />
        <Button
            android:background="@color/gris"
            android:layout_marginTop="535dp"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            android:textSize="40sp"
            android:layout_gravity="center|top"
            android:text="@string/dos" />
        <Button
            android:background="@color/gris"
            android:layout_marginTop="535dp"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            android:textSize="40sp"
            android:layout_gravity="center|top"
            android:text="@string/tres" />

        <Button
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="535dp"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:text="@string/mas"
            android:textSize="40sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <Button
            android:layout_width="300dp"
            android:layout_height="110dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="645dp"
            android:background="@color/gris"
            android:orientation="vertical"
            android:text="@string/cero"
            android:textSize="40sp" />

        <Button
            android:layout_width="113dp"
            android:layout_height="110dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="645dp"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:text="@string/resultado"
            android:textSize="40sp" />


      </LinearLayout>
        </FrameLayout>